src/test/ui/issues/issue-20162.stderr
error[E0277]: the trait bound `X: Ord` is not satisfied
  --> $DIR/issue-20162.rs:5:5
   |
LL |     b.sort();
   |     ^ ---- required by a bound introduced by this call
   |     |
   |     the trait `Ord` is not implemented for `X`
   |
note: required by a bound in `slice::<impl [T]>::sort`
  --> $SRC_DIR/alloc/src/slice.rs:LL:COL
   |
LL |         T: Ord,
   |            ^^^ required by this bound in `slice::<impl [T]>::sort`
help: consider annotating `X` with `#[derive(Ord)]`
   |
LL | #[derive(Ord)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
